test/ui/lowering/constructor-with-explicit-body.stderr
error: constructors may not have a body
  ┌─ ${TEST_FOLDER}/lowering/constructor-with-explicit-body.lushui:2:14
  │
2 │     container = attachment
  │              ═════════════ unexpected body

error: constructors may not have a body
  ┌─ ${TEST_FOLDER}/lowering/constructor-with-explicit-body.lushui:3:26
  │
3 │     attachment: Container = container
  │                          ════════════ unexpected body

error: aborting due to 2 previous errors

