test/ui/lowering/constructor-with-explicit-body.lushui
data Container: Type of
    container = attachment
    attachment: Container = container
